--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,10 +5,202 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-=
+    <meta charset="utf-8" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta meta name="viewport" content="width=device-width, user-scalable=no" />
+    <meta name="description" content="Site Web des manifeste">
+            <div id="haut">
+    </script>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="accueil">test</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="accueil"><i class="bi bi-house"></i> Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="manifs">Manifs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="admin"></i>Administration</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="login">connexion</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+    </nav>
+    <style type="text/css">
+body {
+    margin: 50px;
+}
+iframe {
+  display: block;
+  border: none;
+  width: 90%;       /* à définir et à ajuster */
+  margin: auto;
+box-shadow: blue 0px 0px 0px 1px inset,  rgb(31, 193, 27) 5px -5px,  rgb(255, 217, 19) 10px -10px,  rgb(255, 156, 85) 15px -15px,  rgb(255, 85, 85) 20px -20px;
+                display: flex;
+            align-items: center;
+            justify-content: center;
+                z-index: 4; 
+}
+th {
+    color: red;
+}
+
+nav {
+    background-color: #FFB72B;
+    opacity: 100%;
+    position: fixed;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0px 10px 5px;
+}
+nav a {
+    color: black;
+    text-decoration: none;
+    opacity: 100%;
+}
+nav a:hover {
+    text-decoration: underline;
+}
+main,section#bd {
+    padding-top: 90px;
+}
+h1 {
+    margin: 0;
+}
+
+a.nav-link {
+    color: red;
+}
+#banniere_image
+{
+    height: 250px;
+    border-radius: 15px;
+}
+
+#banniere_description
+{
+    height: 150px;      
+    color: black; 
+                    display: flex;
+            align-items: center;
+            justify-content: center;
+}
+#banniere_description2
+{
+    height: 00px;      
+    color: black; 
+                    display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0%;
+}
+    nav a {
+        margin-right: 5px;
+    }
+    #bd {
+        display: flex;
+        flex-wrap: wrap;
+    }
+@media screen and (max-device-height: 780px) {
+    #banniere_image
+{
+    height: 100px;
+    border-radius: 15px;
+}
+iframe {
+                z-index: 1;
+                position: relative; 
+}
+#banniere_description
+{
+    height: 300px;  
+    z-index: 2;    
+    color: black; 
+                    display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+}
+
+@media screen and (max-device-width: 480px) {
+   body {
+    margin: 0px;
+    margin-top: 50px;
+}
+    nav a {
+        margin-right: 5px;
+    }
+    #bd {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    #banniere_description
+{
+    height: 00px;      
+    color: black; 
+                    display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 0%;
+}
+#banniere_description2
+{
+    height: 400px;      
+    color: black; 
+                    display: flex;
+            align-items: center;
+            justify-content: center;
+            opacity: 100%;
+}
+
+    iframe {
+  display: block;
+  border: none;
+  width: 0%;       /* à définir et à ajuster */
+  margin: auto;
+box-shadow: none
+                display: flex;
+            align-items: center;
+            justify-content: center;
+
+    opacity: 0%;
+    }
+}
+</style>
+<style type="text/css">
+#album{
+    width: 300px;
+    background-color: #1e1436;
+    margin: 20px;
+    opacity: 90%;
+    padding: 5px;
+
+}
+#album:hover{
+        transform: scale(1.05, 1.05);
+    opacity: 100%;
+    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+        
+
+}
+    img{opacity: 100%;}
+</style>
+</header>
     </head>
     <body>
         {% include("menu.html.twig") %}
         {% block body %}{% endblock %}
     </body>
 </html>
+
