--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -179,6 +179,10 @@ box-shadow: none
 }
 </style>
 <style type="text/css">
+body{
+      display:block;
+}
+
 #album{
     width: 300px;
     background-color: #1e1436;
@@ -194,7 +198,17 @@ box-shadow: none
         
 
 }
+        #mazone {     display: flex;
+        flex-wrap: wrap;
+        background-color: red;
+        width: 30%; }
+
     img{opacity: 100%;}
+</style>
+<style type="text/css">
+body{background-image: url("images.jpg");
+    background-repeat: no-repeat;
+    }
 </style>
 </header>
     </head>
