--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,11 +1,14 @@
 {% extends 'base.html.twig' %}
 
-
-
 {% block body %}
+<img src="images.jpg">
 
+    <center><h1>A la une</h1></center>
 
-    <h1>Bienvenue sur notre site</h1>
-    <p>blablabla...
-
+    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
+    </div>
+    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
+    </div>
+    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
+    </div>
 {% endblock %}
