--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,14 +1,76 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<img src="images.jpg">
 
-    <center><h1>A la une</h1></center>
+{# the JS file lives at "public/bundles/acme/js/loader.js" #}
+<script src="{{ asset('bundles/acme/js/loader.js') }}"></script>
 
-    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
-    </div>
-    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
-    </div>
-    <div id="mazone"><img src="images.jpg"><br><h2>Titre</h2><br>
-    </div>
+
+{# the image lives at "public/images/1.jpg" #}
+{# the CSS file lives at "public/css/style.css" #}
+<link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+
+<img src="{{ asset('images/1.jpg') }}" alt="Symfony!"/>
+
+            <div id="banniere_image"></div>
+    <center><h1>Liste de jeux vidéo Mario</h1></center>
+
+    <section id="bd">
+
+
+
+
+    batman
+    <center><h3>batman for ever</h3></center>;
+    <center><img src="{{ asset('images/1.jpg') }}" alt="Photo" height="160" width="118" /></center>;
+    <center><p>sorti le 25 au japon </p></center>;
+    <p class="page">Support : test  </p>;
+    <p class="page">film Dans la serie des batman </p>;
+    <p height="16" width="11">Commentaire : description </p>;
+    <img src="{{ asset('images/1.jpg') }}" alt="Photo" height="80" width="59" /><p>sorti sur cinema3d qui est une console fake  </p>;
+    </div>;
+
+
+
+</section>
+
+<section id="bd">
+
+
+
+
+    batman
+    <center><h3>batman for ever</h3></center>;
+    <center><img src="{{ asset('images/1.jpg') }}" alt="Photo" height="160" width="118" /></center>;
+    <center><p>sorti le 25 au japon </p></center>;
+    <p class="page">Support : test  </p>;
+    <p class="page">film Dans la serie des batman </p>;
+    <p height="16" width="11">Commentaire : description </p>;
+    <img src="{{ asset('images/1.jpg') }}" alt="Photo" height="80" width="59" /><p>sorti sur cinema3d qui est une console fake  </p>;
+    </div>;
+
+
+
+</section>
+
+<section id="bd">
+
+
+
+
+    batman
+    <center><h3>batman for ever</h3></center>;
+    <center><img src="{{ asset('images/1.jpg') }}" alt="Photo" height="160" width="118" /></center>;
+    <center><p>sorti le 25 au japon </p></center>;
+    <p class="page">Support : test  </p>;
+    <p class="page">film Dans la serie des batman </p>;
+    <p height="16" width="11">Commentaire : description </p>;
+    <img src="{{ asset('images/1.jpg') }}" alt="Photo" height="80" width="59" /><p>sorti sur cinema3d qui est une console fake  </p>;
+    </div>;
+
+
+
+</section>
+
+
 {% endblock %}
