--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+
     <meta charset="utf-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -28,31 +29,47 @@
                 <li class="nav-item">
                     <a class="nav-link" href="manifs">Manifs</a>
                 </li>
+                                <li class="nav-item">
+                    <a class="nav-link" href="salle">Salles</a>
+                </li>
+
                 {% if is_granted("ROLE_ADMIN") %}
                 <li class="nav-item">
                     <a class="nav-link" href="admin"></i>Administration</a>
                 {% endif %}
-                {% if app.user %}
-                {{app.user.username}}
-                {% else %}
-                {% else %}
+
+
+                               <li class="nav-item">
+                    <a class="nav-link" href="panier">Panier</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="login">compte</a>
                 </li>
                                 <li class="nav-item">
                     <a class="nav-link" href="register">s'inscrire</a>
                 </li>
-                {% endif %}
+
+
             </ul>
             </div>
         </div>
     </nav>
    
 </header>
+<style type="text/css">
+    body{
+                   background: url("t.jpg");;
+    background-repeat: no-repeat;
+    height: 100px;
+    width: 100%;
+    }
+</style>
     </head>
     <body>
         {% include("menu.html.twig") %}
         {% block body %}{% endblock %}
+
     </body>
+
 </html>
 
