--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,26 +3,56 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Multicinéma Projector{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <link rel="icon" type="image/png" href="{{ asset('images/1.gif') }}" />
 
+        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    
+    <link rel="stylesheet" href="css/style.css">
     <meta charset="utf-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <meta meta name="viewport" content="width=device-width, user-scalable=no" />
     <meta name="description" content="Site Web des manifeste">
+    <link href="../public/css/style2.css'" rel="stylesheet"/>
+<link href="../public/css/style.css" rel="stylesheet"/>
             <div id="haut">
     </script>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="accueil">test</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+<a class="navbar-brand" href="index.html">Multicinéma <span>Projector<i class="bi bi-camera-reels"></i></span></a>
+            <form action="#" class="searchform order-sm-start order-lg-last">
+          <div class="form-group d-flex">
+            <input type="text" class="form-control pl-3" placeholder="Search">
+            <button type="submit" placeholder="" class="form-control search"><span class="fa fa-search"></span></button>
+          </div>
+        </form>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="fa fa-bars"></span> Menu
+          </button>
+          <div class="collapse navbar-collapse" id="ftco-nav">
+            <ul class="navbar-nav m-auto">
                 <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="accueil"><i class="bi bi-house"></i> Accueil</a>
                 </li>
@@ -40,15 +70,18 @@
 
 
                                <li class="nav-item">
-                    <a class="nav-link" href="panier">Panier</a>
+                    <a class="nav-link" href="panier">        <i class="bi bi-cart2"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="login">compte</a>
-                </li>
-                                <li class="nav-item">
-                    <a class="nav-link" href="register">s'inscrire</a>
-                </li>
 
+                <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="login" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ><i class="bi bi-person-circle"></i></a>
+              <div class="dropdown-menu" aria-labelledby="dropdown04">
+                    <a class="dropdown-item" href="login">compte</a>
+                <a class="dropdown-item" href="register">s'inscrire</a>
+                <a class="dropdown-item" href="logout">déconnexion</a>
+              </div>
+            </li>
 
             </ul>
             </div>
@@ -56,6 +89,7 @@
     </nav>
    
 </header>
+
 <style type="text/css">
     body{
                    background: url("t.jpg");;
@@ -63,13 +97,130 @@
     height: 100px;
     width: 100%;
     }
+    body {
+            margin: 0px;
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+
+a {
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease; }
+  a, a:hover {
+    text-decoration: none !important; }
+
+.content {
+  height: 70vh; }
+
+.footer-48201 {
+  padding: 7rem 0;
+  background-color: #000;
+  color: #777; }
+  .footer-48201 .footer-site-logo {
+    font-size: 1.5rem;
+    color: #fff; }
+  .footer-48201 .nav-links li {
+    margin-bottom: 10px; }
+    .footer-48201 .nav-links li a {
+      color: gray; }
+      .footer-48201 .nav-links li a:hover {
+        color: #fff; }
+  .footer-48201 .btn.btn-tertiary {
+    background-color: #e42c64;
+    color: #fff;
+    border-radius: 30px;
+    border: none;
+    padding: 10px 20px; }
+  .footer-48201 .social li {
+    display: inline-block; }
+    .footer-48201 .social li a {
+      color: gray;
+      padding: 7px; }
+      .footer-48201 .social li a:hover {
+        color: #fff; }
+  .footer-48201 .copyright {
+    border-top: 1px solid #404040; }
+
 </style>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap" rel="stylesheet">
+        
+
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
     </head>
     <body>
         {% include("menu.html.twig") %}
         {% block body %}{% endblock %}
 
-    </body>
 
+    
+    
+    <footer class="footer-48201">
+      
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 pr-md-5">
+            <a href="#" class="footer-site-logo d-block mb-4">Multicinéma Projector</a>
+            <p>9 Rue Quebec, 10430 Rosières-prés-Troyes</p>
+          </div>
+          <div class="col-md">
+            <ul class="list-unstyled nav-links">
+              <li><a href="accueil">Accueil</a></li>
+              <li><a href="manifs">Manifs</a></li>
+              <li><a href="salle">Salles</a></li>
+                {% if is_granted("ROLE_ADMIN") %}
+              <li><a href="admin">Administration</a></li>
+               {% endif %}
+              <li><a href="login">compte</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <ul class="list-unstyled nav-links">
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Conditions générale de ventes</a></li>
+              <li><a href="#">Mentions legales</a></li>
+              <li><a href="#">Politique de confidentialité</a></li>
+              <li><a href="#">Cookie</a></li>
+              <li><a href="#">Paramétrer les cookies</a></li>
+            </ul>
+          </div>
+          <div class="col-md">
+            <ul class="list-unstyled nav-links">
+              <li><a href="https://help.ticketmaster.fr/hc/fr">Contact</a></li>
+              <li><a href="https://help.ticketmaster.fr/hc/fr">FAQ</a></li>
+              <li><a href="https://help.ticketmaster.fr/hc/fr">Services</a></li>
+            </ul>
+          </div>
+          <div class="col-md text-md-center">
+            <ul class="social list-unstyled">
+              <li><a href="https://www.instagram.com/"><span class="icon-instagram"></span></a></li>
+              <li><a href="https://twitter.com/"><span class="icon-twitter"></span></a></li>
+              <li><a href="https://fr-fr.facebook.com/"><span class="icon-facebook"></span></a></li>
+            </ul>
+            <p class=""><a href="login" class="btn btn-tertiary">Contacter moi</a></p>
+          </div>
+        </div> 
+
+        <div class="row ">
+          <div class="col-12 text-center">
+            <div class="copyright mt-5 pt-5">
+              <p><small>&copy; 2022 All Rights Reserved.</small></p>
+            </div>
+          </div>
+        </div> 
+      </div>
+      
+    </footer>
+
+    
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
+    </body>
+<style type="text/css">    body {
+            margin: 0px;}</style>
 </html>
 
