--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -61,9 +61,15 @@
                             </div>
                           </td>
                           <td>15€</td>
+                          <td>
                                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true"><i class="fa fa-close"></i></span>
+                            </button></td
+                                                          <td>
+                                <button type="button" >
+                                <span ><a class="nav-link" href="manif"></i>valider l'achat</a></span>
                             </button>
+                            </td>
                             </td>
                             </tr>
 
