--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,27 +3,86 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Login V1</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  {# the image lives at "public/images/img-01.png" #}
+
+<!--===============================================================================================-->  
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+<!--===============================================================================================-->
+{# the CSS file lives at "public/vendor/bootstrap/css/bootstrap.min.css" #}
+<link href="{{ asset('vendor/bootstrap/css/bootstrap.min.csss') }}" rel="stylesheet"/>
+
+<!--===============================================================================================-->
+{# the CSS file lives at "public/fonts/font-awesome-4.7.0/css/font-awesome.min.css" #}
+<link href="{{ asset('fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}" rel="stylesheet"/>
+
+<!--===============================================================================================-->
+{# the CSS file lives at "public/vendor/animate/animate.css" #}
+<link href="{{ asset('vendor/animate/animate.css') }}" rel="stylesheet"/>
+
+<!--===============================================================================================--> 
+{# the CSS file lives at "public/vendor/css-hamburgers/hamburgers.min.css" #}
+<link href="{{ asset('vendor/css-hamburgers/hamburgers.min.css') }}" rel="stylesheet"/> 
+<!--===============================================================================================-->
+{# the CSS file lives at "public/vendor/select2/select2.min.css" #}
+<link href="{{ asset('vendor/select2/select2.min.css') }}" rel="stylesheet"/>
+
+<!--===============================================================================================-->
+{# the CSS file lives at "public/css/util.css" #}
+<link href="{{ asset('css/util.css') }}" rel="stylesheet"/>
+{# the CSS file lives at "public/css/main3.css" #}
+<link href="{{ asset('css/main3.css') }}" rel="stylesheet"/>
+
+<!--===============================================================================================-->
+</head>
+<body>
+    <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
+    <div class="limiter">
+        <div class="container-login100">
+            <div class="wrap-login100">
+                <div class="login100-pic js-tilt" data-tilt>
+                    <img src="{{ asset('images/img-01.png') }}" alt="IMG">
+                </div>
+
+                <form class="login100-form validate-form">
+                    <span class="login100-form-title">
+                        Member Login
+                    </span>
+                    {% if app.user %}
         <div class="mb-3">
             You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
+                    <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+                            <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="" aria-hidden="true"></i>
+                        </span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate = "Password is required">
     <label for="inputPassword">Password</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-
-    <input type="hidden" name="_csrf_token"
+                        <span class="focus-input100"></span>
+                        <span class="symbol-input100">
+                            <i class="" aria-hidden="true"></i>
+                        </span>
+                    </div>
+                    <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
-
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
@@ -34,9 +93,58 @@
             </label>
         </div>
     #}
-
+                    <div class="container-login100-form-btn">
     <button class="btn btn-lg btn-primary" type="submit">
         Sign in
     </button>
 </form>
+    </div>
+
+                    </div>
+
+                    <div class="text-center p-t-12">
+                        <span class="txt1">
+                            Forgot
+                        </span>
+                        <a class="txt2" href="#">
+                            Username / Password?
+                        </a>
+                    </div>
+
+                    <div class="text-center p-t-136">
+                        <a class="txt2" href="#">
+                            Create your Account
+                            <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    
+    
+{# the JS file lives at "public/vendor/jquery/jquery-3.2.1.min.js" #}
+<script src="{{ asset('vendor/jquery/jquery-3.2.1.min.js') }}"></script>
+{# the JS file lives at "public/vendor/bootstrap/js/popper.js" #}
+<script src="{{ asset('vendor/bootstrap/js/popper.js') }}"></script>
+{# the JS file lives at "public/vendor/bootstrap/js/bootstrap.min.js" #}
+<script src="{{ asset('js/vendor/bootstrap/js/bootstrap.min.js') }}"></script>
+{# the JS file lives at "public/vendor/select2/select2.min.js" #}
+<script src="{{ asset('vendor/select2/select2.min.js') }}"></script>
+{# the JS file lives at "public/vendor/tilt/tilt.jquery.min.js" #}
+<script src="{{ asset('vendor/tilt/tilt.jquery.min.js') }}"></script>
+
+    <script >
+        $('.js-tilt').tilt({
+            scale: 1.1
+        })
+    </script>
+{# the JS file lives at "public/js/main3.js" #}
+<script src="{{ asset('js/main3.js') }}"></script>
+
+    
+
+<!--===============================================================================================-->
+
+
 {% endblock %}
